Switched to `@tryghost/{debug,logging}`, dropped logging DI
no issue

- `@tryghost/ignition` is dead and we're moving to individual packages
- `@tryghost/logging` means we no longer need DI for logging from consumer apps

--- a/packages/email-analytics-provider-mailgun/package.json
+++ b/packages/email-analytics-provider-mailgun/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@tryghost/email-analytics-service": "^1.0.0",
+    "@tryghost/logging": "^0.1.1",
     "mailgun-js": "^0.22.0",
     "moment": "^2.29.1"
   }
