--- a/packages/custom-theme-settings-service/package.json
+++ b/packages/custom-theme-settings-service/package.json
@@ -22,11 +22,12 @@
     "c8": "7.9.0",
     "mocha": "9.1.2",
     "should": "13.2.3",
-    "sinon": "11.1.2"
+    "sinon": "^11.1.2"
   },
   "dependencies": {
     "@tryghost/debug": "^0.1.5",
     "@tryghost/errors": "^0.2.14",
-    "@tryghost/tpl": "^0.1.4"
+    "@tryghost/tpl": "^0.1.4",
+    "lodash": "^4.17.21"
   }
 }
