--- a/packages/custom-theme-settings-service/package.json
+++ b/packages/custom-theme-settings-service/package.json
@@ -19,6 +19,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@nexes/nql": "^0.6.0",
     "c8": "7.10.0",
     "mocha": "9.1.3",
     "should": "13.2.3",
