--- a/packages/email-analytics-service/package.json
+++ b/packages/email-analytics-service/package.json
@@ -24,7 +24,7 @@
     "sinon": "11.1.2"
   },
   "dependencies": {
-    "ghost-ignition": "^4.2.4",
+    "@tryghost/debug": "^0.1.9",
     "lodash": "^4.17.20"
   }
 }
