Use @tryghost/logging package instead of injected argument
refs: https://github.com/TryGhost/Toolbox/issues/146

--- a/packages/email-analytics-provider-mailgun/package.json
+++ b/packages/email-analytics-provider-mailgun/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@tryghost/email-analytics-service": "^1.0.4",
+    "@tryghost/logging": "^1.0.2",
     "mailgun-js": "^0.22.0",
     "moment": "^2.29.1"
   }
